--- a/src/app/components/admin/pages/home/home.component.html
+++ b/src/app/components/admin/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class='container'>
+  <img src='/assets/logo.png' alt='Logo do App'>
+  <strong>Logado com Sucesso!</strong>
+
+  <button type='button' class='btn-vermelho'>
+    Sair
+  </button>
+</div>
