--- a/src/app/core/components/auth/pages/sign/sign.component.html
+++ b/src/app/core/components/auth/pages/sign/sign.component.html
@@ -39,5 +39,10 @@
     </button>
   </form>
 
-  <span class='msg-error'>Usuário ou senha incorreta</span>
+  <span
+    *ngIf='msgError'
+    class='msg-error'
+  >
+    {{ msgError }}
+  </span>
 </div>
