--- a/src/app/components/admin/pages/home/home.component.html
+++ b/src/app/components/admin/pages/home/home.component.html
@@ -2,7 +2,11 @@
   <img src='/assets/logo.png' alt='Logo do App'>
   <strong>Logado com Sucesso!</strong>
 
-  <button type='button' class='btn-vermelho'>
+  <button
+    type='button'
+    class='btn-vermelho'
+    (click)="logout()"
+  >
     Sair
   </button>
 </div>
